--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,9 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+/* changed the id for search-engine-optimization to link to an id */
+
+#search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -163,7 +165,7 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+#search-engine-optimization img {
     max-height: 200px;
 }
 
@@ -175,7 +177,7 @@ p {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+#search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
